# dbsw-tabu-qaoa

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml  requirements-qaoa.txt  requirements.txt
.github/workflows/: ci.yml
docs/: input-format.md
examples/: basic_usage.py  maxcut_triangle.txt  qubo_4.txt
src/Qcover_quark/: __init__.py  core.py  utils.py
src/Qcover_quark/backends/: __init__.py  backend.py  circuitbyqulacs.py
src/Qcover_quark/compiler/: __init__.py  compilerforQAOA.py  hardware_library.py
src/Qcover_quark/optimizers/: COBYLA.py  Fourier.py  Gradient_Descent.py  Interp.py  L_BFGS_B.py  SHGO.py  SLSQP.py  SPSA.py  Simulated_Annealing.py  optimizer.py
src/dbsw_qaoa/: __init__.py  cli.py  core.py  io.py  qaoa.py  solver.py  types.py
tests/: test_cli.py  test_io.py  test_solver.py
