[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbsw-qaoa"
version = "0.1.0"
description = "Packaged Tabu-QAOA solver for QUBO and Max-Cut instances."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "DBSW-QAOA contributors" }
]
keywords = ["qaoa", "qubo", "tabu-search", "max-cut", "quantum-optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
qaoa = [
  "matplotlib>=3.5",
  "networkx>=2.8",
  "numpy>=1.21",
  "qulacs>=0.6",
  "scipy>=1.7",
]
dev = [
  "pytest>=7",
]

[project.scripts]
dbsw-qaoa = "dbsw_qaoa.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/dbsw-tabu-qaoa"
Issues = "https://github.com/your-org/dbsw-tabu-qaoa/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["dbsw_qaoa*", "Qcover_quark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
